# cub3d

./: .gitignore  .gitmodules  CMakeLists.txt  MLX42.txt  Makefile
include/: cube.h  cubed.h  defines.h  input.h  structs.h  utils.h
maps/bad_maps/: mult_elem_line.cub  space-zero.cub
maps/good_maps/: basic.cub  example.cub  huge.cub  segfault.cub  segfault2.cub  should_work.cub
src/: CAGLAR_MAPCASTING2.code-workspace  CMakeLists.txt  debug_printing.c  main.c  mock_dda.c
src/dda_ray/: dda_raycast.c  draw_calc.c  draw_fc.c  draw_helpers.c  draw_helpers2.c  draw_map.c  move.c  rot.c  rotate.c
src/input/: build_map_lines.c  checks_map_basic.c  map_check_x.c  parse_fc.c  parse_fc_color.c  parse_file.c  parse_map.c  parse_non_map.c  parse_player.c  parse_textures.c
src/input/map/: build_map_lines.c  check_walls.c  checks_basic.c  parse_map.c  player.c
src/input/textures/: parse_textures.c  tex_utils.c
src/utils/: color.c  free_data.c  key_hooks.c
src/view/: background.c
tests/: CMakeLists.txt  test_ez.c
